--- a/3dapp/lab6/css/custom.css
+++ b/3dapp/lab6/css/custom.css
@@ -31,7 +31,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #MainImageArea {
-    background-image: url(../assets/images/main_3D.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 200px;
@@ -136,12 +135,18 @@ h1, h2, h3, h4, h5, h6 {
 
 	.navbar_text_nolink {
         font-family: Oswald;
-        font-size: 32px;
+        font-size: 14px;
         color: white;
     }
 	
 .toggleView {
 	display: inline;
+}
+
+.navbar_text_small_nolink {
+    font-family: Oswald;
+    font-size:10px;
+    color: white;
 }
 
 .navbar_text_small {
@@ -160,7 +165,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar_text {
     font-family: Oswald;
-    font-size: 24px;
+    font-size: 16px;
     color: white;
 }
 
@@ -234,6 +239,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .copyright {
+	color: white;
     padding-top: 8px;
 }
 
@@ -278,11 +284,31 @@ h1, h2, h3, h4, h5, h6 {
     height:250px;
 }
 
+.camButtonList
+{
+	display:flex;
+	flex-wrap:wrap;
+	height:auto;
+}
+
+
+    X3d, x3d {
+        height: 100%;
+    }
+
 /* X-Small devices (portrait phones, less than 576px)
    No media query for `xs` since this is the default in Bootstrap
 */
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
+		.navbar_text_nolink {
+        font-family: Oswald;
+        font-size: 18px;
+        color: white;
+    }
+	
+	
+	
     .navbar_top {
         background-color: crimson;
         border-color: lightgrey;
@@ -308,15 +334,15 @@ h1, h2, h3, h4, h5, h6 {
         color: lightgrey;
     }
 	
-	.navbar_text_nolink {
+	.navbar_text_small_nolink {
         font-family: Oswald;
-        font-size: 32px;
+        font-size: 12px;
         color: white;
     }
 	
     .navbar_text {
         font-family: Oswald;
-        font-size: 24px;
+        font-size: 16px;
         color: white;
     }
     
@@ -368,13 +394,21 @@ h1, h2, h3, h4, h5, h6 {
         padding:5px;
         height:280px;
     }
-
-    X3d, x3d {
-        height: 100%;
-    }
 }
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+		.navbar_text_nolink {
+        font-family: Oswald;
+        font-size: 22px;
+        color: white;
+    }
+	
+	.navbar_text_small_nolink {
+    font-family: Oswald;
+    font-size: 14px;
+    color: white;
+}
+	
     #MainText {
         float: left;
         margin: 2.5%;
@@ -386,7 +420,6 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     #MainImageArea {
-        background-image: url(../assets/images/main_3D.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         height: 250px;
@@ -396,9 +429,28 @@ h1, h2, h3, h4, h5, h6 {
         padding:5px;
         height:310px;
     }
+	
+	
+	    .navbar_text {
+        font-family: Oswald;
+        font-size: 24px;
+        color: white;
+    }
 }
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+		.navbar_text_nolink {
+        font-family: Oswald;
+        font-size: 26px;
+        color: white;
+    }
+	
+	.navbar_text_small_nolink {
+    font-family: Oswald;
+    font-size: 16px;
+    color: white;
+}
+	
     #MainText {
         float: left;
         margin: 2.5%;
@@ -410,7 +462,6 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     #MainImageArea {
-        background-image: url(../assets/images/main_3D.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         height: 300px;
@@ -423,6 +474,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+		.navbar_text_nolink {
+        font-family: Oswald;
+        font-size: 30px;
+        color: white;
+    }
+	
+	.navbar_text_small_nolink {
+    font-family: Oswald;
+    font-size: 18px;
+    color: white;
+}
+	
     #MainText {
         float: left;
         margin: 2.5%;
@@ -434,7 +497,6 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     #MainImageArea {
-        background-image: url(../assets/images/main_3D.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         height: 450px;
@@ -442,6 +504,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) {
+		.navbar_text_nolink {
+        font-family: Oswald;
+        font-size: 36px;
+        color: white;
+    }
+	
+	.navbar_text_small_nolink {
+    font-family: Oswald;
+    font-size: 20px;
+    color: white;
+}
+
     #MainText {
         float: left;
         margin: 2.5%;
@@ -453,7 +527,6 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     #MainImageArea {
-        background-image: url(../assets/images/main_3D.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         height: 400px;
